--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,9 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-data/
+
+# Data
+*/MNIST/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
